--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,6 @@
     </div>
 </body>
 <script src="http://zoeblow.oschina.io/libs/zepto/1.2.0/zepto.min.js"></script>
-<script src='script/index.js'></script>
+<script src='script/index.min.js'></script>
 
 </html>
